--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
-html, body {
+html,
+body {
     overflow: hidden;
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(94, 94, 94) transparent;
 }
